--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <header id="header">
 <div class="header-img">
   <img id="header-img" src="https://s3.amazonaws.com/aquila_staging/405/logo/35144945_217783272346074_419824716652478464_n.png">
-  
-  </div>
+    </div>
+</header>
+
