--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <header id="header">
 <div class="header-img">
-  <img id="header-img" src="https://za.pinterest.com/pin/389913280244851473/">
+  <img id="header-img" src="C:\Users\ITNA\Documents\trans natal">
     </div>
 </header>
 
