--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <header id="header">
 <div class="header-img">
   <img id="header-img" src="https://s3.amazonaws.com/aquila_staging/405/logo/35144945_217783272346074_419824716652478464_n.png"">
+   </div>                      
                                                                                                                                 
    <iframe id="video"width="560" height="315" 
-      src="https://za.pinterest.com/pin/389913280244851473" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+      src="https://www.youtube.com/watch?v=zE5_LwnJ86w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
      </iframe>                                       
                                              
     </div>
